--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+### Custom ignores ###
+
+# Rider ide files
+src/.idea
+
+
+
 # User-specific files
 *.rsuser
 *.suo
